completed HW 5 Exercise 1

--- a/Homework/05 Multiclass Classification.ipynb
+++ b/Homework/05 Multiclass Classification.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "executionInfo": {
      "elapsed": 3490,
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -162,41 +162,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "id": "-GeBGPGhQ5bu"
    },
    "outputs": [],
    "source": [
     "def build_model(n_classes, learning_rate=0.01):\n",
-    "  \"\"\"Build a multi-class logistic regression model using Keras.\n",
-    "\n",
-    "  Args:\n",
-    "    n_classes: Number of classes in the dataset\n",
-    "    learning_rate: The desired learning rate for SGD.\n",
-    "\n",
-    "  Returns:\n",
-    "    model: A tf.keras model (graph).\n",
-    "  \"\"\"\n",
-    "  tf.keras.backend.clear_session()\n",
-    "  np.random.seed(0)\n",
-    "  tf.random.set_seed(0)\n",
-    "\n",
-    "  model = keras.Sequential()\n",
-    "  model.add(keras.layers.Flatten())\n",
-    "  model.add(keras.layers.Dense(\n",
+    "      \"\"\"Build a multi-class logistic regression model using Keras.\n",
+    "      Args:\n",
+    "      n_classes: Number of classes in the dataset\n",
+    "      learning_rate: The desired learning rate for SGD.\n",
+    "      \n",
+    "      Returns:\n",
+    "      model: A tf.keras model (graph).\n",
+    "      \"\"\"\n",
+    "      \n",
+    "      # Clear session and set a random seed for consistent behavior.\n",
+    "      tf.keras.backend.clear_session()\n",
+    "      np.random.seed(0)\n",
+    "      tf.random.set_seed(0)\n",
+    "      \n",
+    "      # Use Keras Sequential API to build a logistic regression\n",
+    "      model = keras.Sequential()\n",
+    "      \n",
+    "      model.add(keras.layers.Flatten())\n",
+    "      \n",
+    "      model.add(keras.layers.Dense(\n",
+    "        # YOUR CODE HERE\n",
+    "        units=10,  # remember it's a multiclass classification problem      \n",
+    "        activation='softmax', # remember it's a multiclass classification problem\n",
+    "      ))\n",
+    "      \n",
+    "      optimizer = tf.keras.optimizers.SGD(learning_rate=learning_rate)\n",
+    "      \n",
     "      # YOUR CODE HERE\n",
-    "      units=NotImplemented,\n",
-    "      activation=NotImplemented\n",
-    "  ))\n",
-    "\n",
-    "  optimizer = tf.keras.optimizers.SGD(learning_rate=learning_rate)\n",
-    "    \n",
-    "  # YOUR CODE HERE\n",
-    "  model.compile(loss=NotImplemented, \n",
-    "                optimizer=optimizer, \n",
-    "                metrics=['accuracy'])\n",
-    "  return model"
+    "      # Use Categorical Crossentropy as our loss and the SGD optimizer.\n",
+    "      model.compile(\n",
+    "        loss=tf.keras.losses.SparseCategoricalCrossentropy(),\n",
+    "        optimizer=tf.keras.optimizers.SGD(learning_rate),\n",
+    "        metrics=['accuracy']\n",
+    "      )\n",
+    "      \n",
+    "      return model"
    ]
   },
   {
@@ -219,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -239,7 +247,103 @@
     "id": "dYRGXpzY1B5x",
     "outputId": "2b30c3ca-cfca-4160-86a9-5026697d685e"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "844/844 [==============================] - 2s 2ms/step - loss: 0.9976 - accuracy: 0.6943 - val_loss: 0.7644 - val_accuracy: 0.7502\n",
+      "Epoch 2/5\n",
+      "844/844 [==============================] - 1s 1ms/step - loss: 0.6845 - accuracy: 0.7816 - val_loss: 0.6679 - val_accuracy: 0.7762\n",
+      "Epoch 3/5\n",
+      "844/844 [==============================] - 1s 1ms/step - loss: 0.6161 - accuracy: 0.8030 - val_loss: 0.6231 - val_accuracy: 0.7885\n",
+      "Epoch 4/5\n",
+      "844/844 [==============================] - 1s 1ms/step - loss: 0.5787 - accuracy: 0.8139 - val_loss: 0.5986 - val_accuracy: 0.7980\n",
+      "Epoch 5/5\n",
+      "844/844 [==============================] - 1s 1ms/step - loss: 0.5544 - accuracy: 0.8201 - val_loss: 0.5761 - val_accuracy: 0.8060\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>loss</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>val_loss</th>\n",
+       "      <th>val_accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.997606</td>\n",
+       "      <td>0.694278</td>\n",
+       "      <td>0.764360</td>\n",
+       "      <td>0.750167</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.684474</td>\n",
+       "      <td>0.781648</td>\n",
+       "      <td>0.667892</td>\n",
+       "      <td>0.776167</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.616129</td>\n",
+       "      <td>0.802981</td>\n",
+       "      <td>0.623094</td>\n",
+       "      <td>0.788500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.578731</td>\n",
+       "      <td>0.813926</td>\n",
+       "      <td>0.598561</td>\n",
+       "      <td>0.798000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.554377</td>\n",
+       "      <td>0.820130</td>\n",
+       "      <td>0.576119</td>\n",
+       "      <td>0.806000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       loss  accuracy  val_loss  val_accuracy\n",
+       "0  0.997606  0.694278  0.764360      0.750167\n",
+       "1  0.684474  0.781648  0.667892      0.776167\n",
+       "2  0.616129  0.802981  0.623094      0.788500\n",
+       "3  0.578731  0.813926  0.598561      0.798000\n",
+       "4  0.554377  0.820130  0.576119      0.806000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "model = build_model(len(label_names), 0.01)\n",
     "\n",
@@ -477,8 +581,11 @@
    "provenance": [],
    "toc_visible": true
   },
+  "interpreter": {
+   "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -492,7 +599,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
