Working version of HW 5 Exercise 3

--- a/Homework/04 Logistic Regression with Tensorflow.ipynb
+++ b/Homework/04 Logistic Regression with Tensorflow.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 23,
    "metadata": {
     "id": "7X58hOMTUH-w"
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 24,
    "metadata": {
     "id": "load_auto_data_set_code"
    },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 25,
    "metadata": {
     "id": "H6jGmsYAdKEK"
    },
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 26,
    "metadata": {
     "id": "wXukkWBWdlGj"
    },
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 27,
    "metadata": {
     "id": "cZpFxxStzSrP"
    },
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 28,
    "metadata": {
     "id": "7mfV9b4I7cMW"
    },
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 29,
    "metadata": {
     "id": "HJtwrjdO6TbS"
    },
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 30,
    "metadata": {
     "id": "3webN4USifuB"
    },
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 31,
    "metadata": {
     "id": "FblS-OVmns4a"
    },
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 32,
    "metadata": {
     "id": "sNryj_kGq8vV"
    },
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 33,
    "metadata": {
     "id": "ls30LfwsIZCv"
    },
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 34,
    "metadata": {
     "id": "oFM62C3uhoq_"
    },
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 35,
    "metadata": {
     "id": "eaKF1dVEwsJq"
    },
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 36,
    "metadata": {
     "id": "ZrpMK0XfX4-M"
    },
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 37,
    "metadata": {
     "id": "KkUagTzxpWdr"
    },
@@ -844,15 +844,15 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "844/844 [==============================] - 2s 1ms/step - loss: 0.1407 - binary_accuracy: 0.9432 - val_loss: 0.1152 - val_binary_accuracy: 0.9497\n",
+      "844/844 [==============================] - 1s 1ms/step - loss: 0.1407 - binary_accuracy: 0.9432 - val_loss: 0.1152 - val_binary_accuracy: 0.9497\n",
       "Epoch 2/5\n",
-      "844/844 [==============================] - 1s 987us/step - loss: 0.1061 - binary_accuracy: 0.9573 - val_loss: 0.1030 - val_binary_accuracy: 0.9582\n",
+      "844/844 [==============================] - 1s 1ms/step - loss: 0.1061 - binary_accuracy: 0.9573 - val_loss: 0.1030 - val_binary_accuracy: 0.9582\n",
       "Epoch 3/5\n",
-      "844/844 [==============================] - 1s 933us/step - loss: 0.0959 - binary_accuracy: 0.9631 - val_loss: 0.0959 - val_binary_accuracy: 0.9605\n",
+      "844/844 [==============================] - 1s 991us/step - loss: 0.0959 - binary_accuracy: 0.9631 - val_loss: 0.0959 - val_binary_accuracy: 0.9605\n",
       "Epoch 4/5\n",
-      "844/844 [==============================] - 1s 917us/step - loss: 0.0894 - binary_accuracy: 0.9669 - val_loss: 0.0909 - val_binary_accuracy: 0.9623\n",
+      "844/844 [==============================] - 1s 1ms/step - loss: 0.0894 - binary_accuracy: 0.9669 - val_loss: 0.0909 - val_binary_accuracy: 0.9623\n",
       "Epoch 5/5\n",
-      "844/844 [==============================] - 1s 974us/step - loss: 0.0848 - binary_accuracy: 0.9691 - val_loss: 0.0877 - val_binary_accuracy: 0.9633\n"
+      "844/844 [==============================] - 1s 990us/step - loss: 0.0848 - binary_accuracy: 0.9691 - val_loss: 0.0877 - val_binary_accuracy: 0.9633\n"
      ]
     },
     {
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 38,
    "metadata": {
     "id": "t0PU3br4-zv8"
    },
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 39,
    "metadata": {
     "id": "B-o6Bdkl2gQT"
    },
@@ -1059,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 40,
    "metadata": {
     "id": "n9aw-V-FTlaq"
    },
@@ -1068,7 +1068,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<keras.layers.core.flatten.Flatten object at 0x000002B871DA8F70>, <keras.layers.core.dense.Dense object at 0x000002B86183B0D0>]\n",
+      "[<keras.layers.core.flatten.Flatten object at 0x00000295C0AD7040>, <keras.layers.core.dense.Dense object at 0x00000295985A04F0>]\n",
       "Bias: -0.44215235\n",
       "Weights shape: (784,)\n"
      ]
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 41,
    "metadata": {
     "id": "3d4NzODhbB8G"
    },
@@ -1121,7 +1121,7 @@
        "array([[0.39122826]], dtype=float32)"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
