Completed version of HW 5

--- a/Homework/05 Multiclass Classification.ipynb
+++ b/Homework/05 Multiclass Classification.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {
     "executionInfo": {
      "elapsed": 3490,
@@ -47,7 +47,7 @@
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
     "from keras import metrics\n",
-    "tf.get_logger().setLevel('INFO')"
+    "tf.get_logger().setLevel('INFO')\n"
    ]
   },
   {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {
     "id": "-GeBGPGhQ5bu"
    },
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -253,7 +253,7 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "844/844 [==============================] - 4s 2ms/step - loss: 0.9976 - accuracy: 0.6943 - val_loss: 0.7644 - val_accuracy: 0.7502\n",
+      "844/844 [==============================] - 2s 2ms/step - loss: 0.9976 - accuracy: 0.6943 - val_loss: 0.7644 - val_accuracy: 0.7502\n",
       "Epoch 2/5\n",
       "844/844 [==============================] - 1s 1ms/step - loss: 0.6845 - accuracy: 0.7816 - val_loss: 0.6679 - val_accuracy: 0.7762\n",
       "Epoch 3/5\n",
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -490,9 +490,9 @@
    "source": [
     "*Written answer:*\n",
     "\n",
-    "1. Lowest precision = shirts; precision = 514; Higest precision = ankle boot; precision = 932\n",
+    "1. Lowest precision = shirts; precision = 58; Higest precision = trouser; precision = 96\n",
     "\n",
-    "2. Sneakers false negatives = sandals; sneaker false positives = 166"
+    "2. Sneakers false negatives = ankle boot; sneaker false positives = 166"
    ]
   },
   {
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 22,
    "metadata": {
     "id": "xUZfCG1ylVtp"
    },
@@ -574,34 +574,6 @@
    ],
    "source": [
     "# YOUR CODE HERE\n",
-    "\n",
-    "# model_graph = model.predict(X_test)\n",
-    "# test_predictions = np.argmax(model.predict(X_test), axis=-1)\n",
-    "\n",
-    "# find shirt images with coat label\n",
-    "# confusion_matrix = tf.math.confusion_matrix(Y_test, test_predictions)\n",
-    "\n",
-    "# print(test_predictions) # model predictions\n",
-    "# ax.set(xlabel='Predicted Label', ylabel='True Label')\n",
-    "# print(Y_test.shape) # true labels\n",
-    "\n",
-    "# print(model_graph.shape)\n",
-    "\n",
-    "# print(confusion_matrix)\n",
-    "\n",
-    "# label_names = ['t-shirt', 'trouser', 'pullover', 'dress', 'coat',\n",
-    "#                'sandal', 'shirt', 'sneaker', 'bag', 'ankle boot']\n",
-    "\n",
-    "# fig, axs = plt.subplots(nrows=1, ncols=5, figsize=(10,5))\n",
-    "# for i in range(5):\n",
-    "#   image = X_test[i]\n",
-    "#   label = Y_test[i]\n",
-    "#   label_name = label_names[label]\n",
-    "#   axs[i].imshow(image, cmap='gray')\n",
-    "#   axs[i].set_title(label_name)\n",
-    "#   axs[i].axis('off')\n",
-    "# plt.show()\n",
-    "\n",
     "img_arr_shirts = []\n",
     "counter = 0\n",
     "index = 0\n",
@@ -662,11 +634,7 @@
     "  axs[i].imshow(image, cmap='gray')\n",
     "  axs[i].set_title(label_name)\n",
     "  axs[i].axis('off')\n",
-    "plt.show()\n",
-    "\n",
-    "\n",
-    "           \n",
-    "\n"
+    "plt.show()\n"
    ]
   },
   {
@@ -690,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
