Updated my completed version of HW 5

--- a/Homework/05 Multiclass Classification.ipynb
+++ b/Homework/05 Multiclass Classification.ipynb
@@ -490,7 +490,9 @@
    "source": [
     "*Written answer:*\n",
     "\n",
-    "1. Lowest precision = shirts; precision = 58; Higest precision = trouser; precision = 96\n",
+    "   Precision = TruePositive \\ (TruePositives + FalsePositives)\n",
+    "\n",
+    "1. Lowest precision = shirts; precision = 514 / (884) = 0.58 ; Higest precision = trouser; precision = 930 / (958) = 0.97\n",
     "\n",
     "2. Sneakers false negatives = ankle boot; sneaker false positives = 166"
    ]
