Completed HW 8 Exercise 4

--- a/Homework/Victor_Ramirez_Assignment_08 Kmeans Clustering.ipynb
+++ b/Homework/Victor_Ramirez_Assignment_08 Kmeans Clustering.ipynb
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
    "metadata": {
     "id": "ROCne7e6JlKk"
    },
@@ -421,7 +421,7 @@
        "[2030 rows x 4 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,19 +431,20 @@
     "random_state = 10  # makes sure you get the same results each time\n",
     "\n",
     "## get np array for RBG values\n",
-    "X = np.array(df_colors.values)\n",
+    "# X = np.array(df_colors.values)\n",
+    "X = np.array(df_colors[['red','green','blue']].values)\n",
     "\n",
     "\n",
     "def fit_kmeans(X, n_clusters, random_state):  \n",
     "  \n",
     "  ## YOUR CODE HERE ##   \n",
     "  # fit KMeans models with different numbers of clusters\n",
-    "  model =KMeans(n_clusters=n_clusters,           \n",
-    "                init='k-means++',\n",
-    "                n_init=n_clusters,\n",
-    "                max_iter=300,\n",
-    "                tol=1e-04,\n",
-    "                random_state=random_state)\n",
+    "  model = KMeans(n_clusters=n_clusters,           \n",
+    "                 init='k-means++',\n",
+    "                 n_init=n_clusters,\n",
+    "                 max_iter=300,\n",
+    "                 tol=1e-04,\n",
+    "                 random_state=random_state)\n",
     "  \n",
     "  return model.fit(X)\n",
     "\n",
@@ -488,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 49,
    "metadata": {
     "id": "gwPsVEGGKGSr"
    },
@@ -590,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 50,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -606,7 +607,7 @@
        "<AxesSubplot:xlabel='index', ylabel='cluster'>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -649,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 51,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -674,7 +675,7 @@
        " 10: 'black'}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +708,8 @@
     "id": "hqygpwqUcjuL"
    },
    "source": [
-    "---\n",
+    "--- \n",
+    "\n",
     "### Exercise 4: Determine the centroids of the clusters (4 points)\n"
    ]
   },
@@ -722,16 +724,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "id": "O0ppzlJSLnBV"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>244.318182</td>\n",
+       "      <td>246.982323</td>\n",
+       "      <td>246.371212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>13.742604</td>\n",
+       "      <td>12.257396</td>\n",
+       "      <td>16.142012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>145.812500</td>\n",
+       "      <td>139.180556</td>\n",
+       "      <td>139.395833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>225.338983</td>\n",
+       "      <td>181.364407</td>\n",
+       "      <td>41.898305</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>85.585938</td>\n",
+       "      <td>191.468750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>203.412903</td>\n",
+       "      <td>192.264516</td>\n",
+       "      <td>165.529032</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>189.962264</td>\n",
+       "      <td>31.106918</td>\n",
+       "      <td>40.735849</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>116.894118</td>\n",
+       "      <td>203.141176</td>\n",
+       "      <td>229.317647</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>65.505988</td>\n",
+       "      <td>72.538922</td>\n",
+       "      <td>58.790419</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>59.421965</td>\n",
+       "      <td>135.086705</td>\n",
+       "      <td>183.560694</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            0           1           2\n",
+       "0  244.318182  246.982323  246.371212\n",
+       "1   13.742604   12.257396   16.142012\n",
+       "2  145.812500  139.180556  139.395833\n",
+       "3  225.338983  181.364407   41.898305\n",
+       "4    9.000000   85.585938  191.468750\n",
+       "5  203.412903  192.264516  165.529032\n",
+       "6  189.962264   31.106918   40.735849\n",
+       "7  116.894118  203.141176  229.317647\n",
+       "8   65.505988   72.538922   58.790419\n",
+       "9   59.421965  135.086705  183.560694"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# get centroids\n",
     "\n",
     "## YOUR CODE HERE ## \n",
-    "centroids = None"
+    "kmeans = KMeans(n_clusters=10).fit(X)\n",
+    "centroids = kmeans.cluster_centers_\n",
+    "pd.DataFrame(centroids)\n"
    ]
   },
   {
@@ -761,17 +875,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {
     "id": "Ocw4OTu2c2DF"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "[200, 5, 5]\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "## your color guessing function\n",
     "def guess_color(centroids, color_dict, test_color):\n",
     "\n",
     "  ## YOUR CODE HERE ## \n",
-    "  color_name = None\n",
+    "  \n",
+    "  # calculate Euclidean distance\n",
+    "  # using linalg.norm() method\n",
+    "  # dist = np.linalg.norm(point1 - point2)\n",
+    "  # color_name = kmeans.predict(centroids, test_color)\n",
+    "  \n",
+    "  color_name = None \n",
+    "  \n",
+    "  print(centroids.size)\n",
+    "  print(test_color)\n",
+    "  \n",
     "  return color_name\n",
     "\n",
     "color1 = [200, 5, 5]  # approximately red \n",
@@ -828,19 +962,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {
     "id": "U-ZJuciof8s8"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "[200, 5, 5]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "def show_color(test_color, color_name):\n",
-    "\n",
-    "  ## do something\n",
-    "\n",
-    "\n",
+    "      print()\n",
+    "      ## do something\n",
+    "      \n",
     "color1 = [200, 5, 5] # approximately red \n",
     "color1_name = guess_color(centroids=centroids, color_dict=color_dict, test_color=color1)\n",
+    "      \n",
     "show_color(color1, color1_name)"
    ]
   },
