Completed HW 8 Exercise 5

--- a/Homework/Victor_Ramirez_Assignment_08 Kmeans Clustering.ipynb
+++ b/Homework/Victor_Ramirez_Assignment_08 Kmeans Clustering.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {
     "id": "lpOiog6ffG1N"
    },
@@ -46,7 +46,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
-    "from sklearn.cluster import KMeans"
+    "from sklearn.cluster import KMeans\n",
+    "import math"
    ]
   },
   {
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "id": "ojQcyUk0fDG_"
    },
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -111,7 +112,7 @@
        "2030"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -203,7 +204,7 @@
        "4  248    253   253"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -229,17 +230,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Victor\\AppData\\Local\\Temp/ipykernel_30412/1483985810.py:4: MatplotlibDeprecationWarning: Calling gca() with keyword arguments was deprecated in Matplotlib 3.4. Starting two minor releases later, gca() will take no keyword arguments. The gca() function should only be used to get the current axes, or if no axes exist, create new axes with default keyword arguments. To create a new axes with non-default arguments, use plt.axes() or plt.subplot().\n",
+      "C:\\Users\\Victor\\AppData\\Local\\Temp/ipykernel_8872/1483985810.py:4: MatplotlibDeprecationWarning: Calling gca() with keyword arguments was deprecated in Matplotlib 3.4. Starting two minor releases later, gca() will take no keyword arguments. The gca() function should only be used to get the current axes, or if no axes exist, create new axes with default keyword arguments. To create a new axes with non-default arguments, use plt.axes() or plt.subplot().\n",
       "  fig = plt.figure().gca(projection='3d')\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x1f16f31efa0>"
+       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x15956b25790>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -289,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {
     "id": "ROCne7e6JlKk"
    },
@@ -421,7 +422,7 @@
        "[2030 rows x 4 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {
     "id": "gwPsVEGGKGSr"
    },
@@ -591,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -607,7 +608,7 @@
        "<AxesSubplot:xlabel='index', ylabel='cluster'>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -650,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 71,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -662,20 +663,19 @@
     {
      "data": {
       "text/plain": [
-       "{0: 'teal',\n",
-       " 1: 'green',\n",
-       " 2: 'blue',\n",
-       " 3: 'orange',\n",
-       " 4: 'yellow',\n",
-       " 5: 'yellow',\n",
-       " 6: 'brown',\n",
-       " 7: 'red',\n",
-       " 8: 'purple',\n",
-       " 9: 'light blue',\n",
-       " 10: 'black'}"
+       "{0: 'space black',\n",
+       " 1: 'pool party',\n",
+       " 2: 'chantilly lace',\n",
+       " 3: 'bonfire',\n",
+       " 4: 'cup o java',\n",
+       " 5: 'sunrays',\n",
+       " 6: 'urban sophistication',\n",
+       " 7: 'evening blue',\n",
+       " 8: 'essex green',\n",
+       " 9: 'athens blue'}"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,17 +685,16 @@
     "\n",
     "## YOUR CODE HERE ## \n",
     "color_dict = {\n",
-    "    0:'teal', \n",
-    "    1:'green', \n",
-    "    2:'blue', \n",
-    "    3:'orange', \n",
-    "    4:'yellow', \n",
-    "    5:'yellow', \n",
-    "    6:'brown', \n",
-    "    7:'red', \n",
-    "    8:'purple', \n",
-    "    9:'light blue', \n",
-    "    10:'black'\n",
+    "    0:'space black', \n",
+    "    1:'pool party', \n",
+    "    2:'chantilly lace', \n",
+    "    3:'bonfire', \n",
+    "    4:'cup o java', \n",
+    "    5:'sunrays', \n",
+    "    6:'urban sophistication', \n",
+    "    7:'evening blue', \n",
+    "    8:'essex green', \n",
+    "    9:'athens blue',     \n",
     "    # etc etc ...\n",
     "}\n",
     "\n",
@@ -724,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {
     "id": "O0ppzlJSLnBV"
    },
@@ -758,63 +757,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>244.318182</td>\n",
-       "      <td>246.982323</td>\n",
-       "      <td>246.371212</td>\n",
+       "      <td>184.586066</td>\n",
+       "      <td>176.512295</td>\n",
+       "      <td>159.073770</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>47.068293</td>\n",
+       "      <td>67.034146</td>\n",
+       "      <td>47.351220</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>244.112782</td>\n",
+       "      <td>246.619048</td>\n",
+       "      <td>246.125313</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>192.655629</td>\n",
+       "      <td>29.589404</td>\n",
+       "      <td>38.801325</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>12.803571</td>\n",
+       "      <td>102.625000</td>\n",
+       "      <td>199.404762</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
        "      <td>13.742604</td>\n",
        "      <td>12.257396</td>\n",
        "      <td>16.142012</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>145.812500</td>\n",
-       "      <td>139.180556</td>\n",
-       "      <td>139.395833</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>225.338983</td>\n",
-       "      <td>181.364407</td>\n",
-       "      <td>41.898305</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>9.000000</td>\n",
-       "      <td>85.585938</td>\n",
-       "      <td>191.468750</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>203.412903</td>\n",
-       "      <td>192.264516</td>\n",
-       "      <td>165.529032</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>189.962264</td>\n",
-       "      <td>31.106918</td>\n",
-       "      <td>40.735849</td>\n",
+       "      <td>224.605042</td>\n",
+       "      <td>181.310924</td>\n",
+       "      <td>42.067227</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>116.894118</td>\n",
-       "      <td>203.141176</td>\n",
-       "      <td>229.317647</td>\n",
+       "      <td>117.744186</td>\n",
+       "      <td>203.883721</td>\n",
+       "      <td>229.162791</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>65.505988</td>\n",
-       "      <td>72.538922</td>\n",
-       "      <td>58.790419</td>\n",
+       "      <td>105.576271</td>\n",
+       "      <td>87.231638</td>\n",
+       "      <td>84.378531</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>59.421965</td>\n",
-       "      <td>135.086705</td>\n",
-       "      <td>183.560694</td>\n",
+       "      <td>73.041958</td>\n",
+       "      <td>128.279720</td>\n",
+       "      <td>170.440559</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -822,19 +821,19 @@
       ],
       "text/plain": [
        "            0           1           2\n",
-       "0  244.318182  246.982323  246.371212\n",
-       "1   13.742604   12.257396   16.142012\n",
-       "2  145.812500  139.180556  139.395833\n",
-       "3  225.338983  181.364407   41.898305\n",
-       "4    9.000000   85.585938  191.468750\n",
-       "5  203.412903  192.264516  165.529032\n",
-       "6  189.962264   31.106918   40.735849\n",
-       "7  116.894118  203.141176  229.317647\n",
-       "8   65.505988   72.538922   58.790419\n",
-       "9   59.421965  135.086705  183.560694"
+       "0  184.586066  176.512295  159.073770\n",
+       "1   47.068293   67.034146   47.351220\n",
+       "2  244.112782  246.619048  246.125313\n",
+       "3  192.655629   29.589404   38.801325\n",
+       "4   12.803571  102.625000  199.404762\n",
+       "5   13.742604   12.257396   16.142012\n",
+       "6  224.605042  181.310924   42.067227\n",
+       "7  117.744186  203.883721  229.162791\n",
+       "8  105.576271   87.231638   84.378531\n",
+       "9   73.041958  128.279720  170.440559"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 87,
    "metadata": {
     "id": "Ocw4OTu2c2DF"
    },
@@ -884,27 +883,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30\n",
-      "[200, 5, 5]\n",
-      "None\n"
+      "bonfire\n"
      ]
     }
    ],
    "source": [
     "## your color guessing function\n",
     "def guess_color(centroids, color_dict, test_color):\n",
+    "      \n",
+    "  ## YOUR CODE HERE ##    \n",
+    "  distances = []  \n",
+    "  \n",
+    "  # loop the centroids  \n",
+    "  for centroid in centroids:  \n",
+    "    \n",
+    "    # calculate Euclidean distance\n",
+    "    distances.append(np.sqrt(np.sum((test_color - centroid)**2)))\n",
     "\n",
-    "  ## YOUR CODE HERE ## \n",
+    "  # find the min list value index\n",
+    "  index_min = np.argmin(distances)  \n",
     "  \n",
-    "  # calculate Euclidean distance\n",
-    "  # using linalg.norm() method\n",
-    "  # dist = np.linalg.norm(point1 - point2)\n",
-    "  # color_name = kmeans.predict(centroids, test_color)\n",
-    "  \n",
-    "  color_name = None \n",
-    "  \n",
-    "  print(centroids.size)\n",
-    "  print(test_color)\n",
+    "  color_name = color_dict[index_min]\n",
     "  \n",
     "  return color_name\n",
     "\n",
