Completed HW 8 Exercise 6

--- a/Homework/Victor_Ramirez_Assignment_08 Kmeans Clustering.ipynb
+++ b/Homework/Victor_Ramirez_Assignment_08 Kmeans Clustering.ipynb
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 92,
    "metadata": {
     "id": "Ocw4OTu2c2DF"
    },
@@ -923,16 +923,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {
     "id": "vwJN1DUQfrD_"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bonfire\n"
+     ]
+    }
+   ],
    "source": [
     "def predict_color(model, color_dict, test_color):\n",
     "\n",
-    "    ## YOUR CODE HERE ## \n",
-    "    color_name = None\n",
+    "    ## YOUR CODE HERE ##     \n",
+    "    color_name = guess_color(centroids=model.cluster_centers_, color_dict=color_dict, test_color=test_color)\n",
+    "    \n",
     "    return color_name\n",
     "\n",
     "color1 = [200, 5, 5] # approximately red \n",
